[dependencies]
quick-xml = "0.37"
thiserror = { version = "2.0" }
windows-version = "0.1"

[dependencies.windows]
features = [
	"Win32_Foundation",
	"Foundation_Collections",
	"Win32_System_SystemInformation",
	"Data_Xml_Dom",
	"UI_Notifications",
]
version = "0.59"

[lib]
path = "Source/lib.rs"

[package]
authors = ["allenbenz", "Tauri Programme within The Commons Conservancy"]
description = "An incomplete wrapper over the WinRT toast api"
documentation = "https://docs.rs/tauri-winrt-notification/"
edition = "2024"
keywords = ["notification", "windows", "toast", "notify"]
license-file = "LICENSE"
name = "tauri-winrt-notification"
readme = "README.md"
repository = "https://github.com/tauri-apps/winrt-notification"
rust-version = "1.85.0"
version = "0.7.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
